--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/node:webpack",
+      "executor": "@nrwl/webpack:webpack",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/supreme-discord-community-bot-node",
@@ -14,7 +14,9 @@
           "apps/supreme-discord-community-bot-node/src/assets",
           "apps/supreme-discord-community-bot-node/src/Dockerfile"
         ],
-        "generatePackageJson": true
+        "generatePackageJson": true,
+        "target": "node",
+        "compiler": "tsc"
       },
       "configurations": {
         "production": {
@@ -31,7 +33,7 @@
       }
     },
     "image-build": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": [
           {
