--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.7",
-    "@angular/cdk": "14.0.6",
-    "@angular/common": "14.0.7",
-    "@angular/compiler": "14.0.7",
-    "@angular/core": "14.0.7",
-    "@angular/forms": "14.0.7",
-    "@angular/platform-browser": "14.0.7",
-    "@angular/platform-browser-dynamic": "14.0.7",
-    "@angular/router": "14.0.7",
+    "@angular/animations": "14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "14.2.12",
+    "@angular/compiler": "14.2.12",
+    "@angular/core": "14.2.12",
+    "@angular/forms": "14.2.12",
+    "@angular/platform-browser": "14.2.12",
+    "@angular/platform-browser-dynamic": "14.2.12",
+    "@angular/router": "14.2.12",
     "@discordjs/rest": "^0.2.0-canary.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.0",
+    "@nestjs/common": "9.0.0",
+    "@nestjs/core": "9.0.0",
+    "@nestjs/jwt": "9.0.0",
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/platform-express": "9.0.0",
+    "@nestjs/typeorm": "9.0.1",
     "discord.js": "^13.12.0",
     "marked": "^1.2.7",
     "mysql": "^2.18.1",
@@ -52,51 +52,52 @@
     "passport-steam": "^1.0.15",
     "public-ip": "^4.0.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0",
+    "rxjs": "~7.5.0",
     "srcds-rcon": "git@github.com:Proantagonist/SupremeArkSrcdsRcon.git",
     "tslib": "^2.0.0",
-    "typeorm": "^0.2.25",
+    "typeorm": "^0.3.0",
     "uuid": "^3.3.2",
     "webfontloader": "^1.6.28",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.7",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/compiler-cli": "14.0.7",
-    "@angular/language-service": "14.0.7",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/angular": "14.2.1",
-    "@nrwl/cli": "14.2.1",
-    "@nrwl/cypress": "14.2.1",
-    "@nrwl/eslint-plugin-nx": "14.2.1",
-    "@nrwl/jest": "14.2.1",
-    "@nrwl/linter": "14.2.1",
-    "@nrwl/nest": "14.2.1",
-    "@nrwl/node": "14.2.1",
-    "@nrwl/web": "14.2.1",
-    "@nrwl/workspace": "14.2.1",
-    "@types/jest": "27.4.1",
-    "@types/node": "14.14.33",
-    "@types/passport-jwt": "^3.0.6",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
+    "@angular-devkit/build-angular": "14.2.10",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/compiler-cli": "14.2.12",
+    "@angular/language-service": "14.2.12",
+    "@nestjs/schematics": "9.0.0",
+    "@nestjs/testing": "9.0.0",
+    "@nrwl/angular": "14.8.6",
+    "@nrwl/cli": "14.8.6",
+    "@nrwl/cypress": "14.8.6",
+    "@nrwl/eslint-plugin-nx": "14.8.6",
+    "@nrwl/jest": "14.8.6",
+    "@nrwl/linter": "14.8.6",
+    "@nrwl/nest": "14.8.6",
+    "@nrwl/node": "14.8.6",
+    "@nrwl/web": "14.8.6",
+    "@nrwl/workspace": "14.8.6",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.1",
+    "@types/passport-jwt": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "codelyzer": "^6.0.0",
     "cypress": "^5.5.0",
     "discord-api-types": "^0.26.0",
     "dotenv": "10.0.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
-    "nx": "14.2.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.2",
+    "nx": "14.8.6",
     "prettier": "2.6.2",
-    "ts-jest": "27.1.4",
-    "ts-node": "10.8.2",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
     "tslint": "6.1.3",
-    "typescript": "4.7.4"
+    "typescript": "4.8.4"
   }
 }
