Execute trailing migrations from generating new angular app
Was done to get a fresh copy of the e2e app for supremegamin-angular since that config was no longer working

--- a/apps/ark-cacher-node/project.json
+++ b/apps/ark-cacher-node/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "ark-cacher-node",
   "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "apps/ark-cacher-node/src",
   "projectType": "application",
