--- a/libs/utilities/database/project.json
+++ b/libs/utilities/database/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "utilities-database",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/utilities/database/src",
   "projectType": "library",
