--- a/libs/common/entities/administration/project.json
+++ b/libs/common/entities/administration/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "common-entities-administration",
   "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/administration/src",
   "projectType": "library",
