--- a/libs/common/entities/project.json
+++ b/libs/common/entities/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "common-entities",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/src",
   "projectType": "library",
