--- a/libs/common/entities/servers/project.json
+++ b/libs/common/entities/servers/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "common-entities-servers",
   "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/servers/src",
   "projectType": "library",
