--- a/libs/common/interfaces/project.json
+++ b/libs/common/interfaces/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "common-interfaces",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/common/interfaces/src",
