--- a/libs/data-access/project.json
+++ b/libs/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "data-access",
   "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/data-access/src",
