--- a/libs/discord/community/project.json
+++ b/libs/discord/community/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "discord-community",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/discord/community/src",
   "projectType": "library",
