--- a/libs/discord/templates/project.json
+++ b/libs/discord/templates/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "discord-templates",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/discord/templates/src",
   "projectType": "library",
