--- a/libs/pages/public/project.json
+++ b/libs/pages/public/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "pages-public",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/pages/public/src",
