--- a/libs/sass/project.json
+++ b/libs/sass/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "scss",
   "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
   "tags": []
