--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@angular-eslint/eslint-plugin": "14.0.4",
     "@angular-eslint/eslint-plugin-template": "14.0.4",
     "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "14.2.12",
     "@angular/language-service": "14.2.12",
     "@nestjs/schematics": "9.0.0",
@@ -90,6 +91,7 @@
     "dotenv": "10.0.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
