--- a/apps/ark-cacher-node/project.json
+++ b/apps/ark-cacher-node/project.json
@@ -45,7 +45,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/ark-cacher-node"],
+      "outputs": ["{workspaceRoot}/coverage/apps/ark-cacher-node"],
       "options": {
         "jestConfig": "apps/ark-cacher-node/jest.config.ts",
         "passWithNoTests": true
