--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -59,7 +59,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/supreme-discord-community-bot-node"],
+      "outputs": ["{workspaceRoot}/coverage/apps/supreme-discord-community-bot-node"],
       "options": {
         "jestConfig": "apps/supreme-discord-community-bot-node/jest.config.ts",
         "passWithNoTests": true
