--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -74,7 +74,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/supremegaming-angular"],
+      "outputs": ["{workspaceRoot}/coverage/apps/supremegaming-angular"],
       "options": {
         "jestConfig": "apps/supremegaming-angular/jest.config.ts",
         "passWithNoTests": true
