--- a/libs/common/entities/servers/project.json
+++ b/libs/common/entities/servers/project.json
@@ -20,7 +20,7 @@
         "tsConfig": "libs/common/entities/servers/tsconfig.spec.json",
         "passWithNoTests": true
       },
-      "outputs": ["coverage/libs/common/entities/servers"]
+      "outputs": ["{workspaceRoot}/coverage/libs/common/entities/servers"]
     }
   },
   "tags": []
