--- a/libs/common/ngx/project.json
+++ b/libs/common/ngx/project.json
@@ -14,7 +14,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/common/ngx"],
+      "outputs": ["{workspaceRoot}/coverage/libs/common/ngx"],
       "options": {
         "jestConfig": "libs/common/ngx/jest.config.ts",
         "passWithNoTests": true
