--- a/libs/data-access/project.json
+++ b/libs/data-access/project.json
@@ -14,7 +14,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/data-access"],
+      "outputs": ["{workspaceRoot}/coverage/libs/data-access"],
       "options": {
         "jestConfig": "libs/data-access/jest.config.ts",
         "passWithNoTests": true
