--- a/libs/discord/community/project.json
+++ b/libs/discord/community/project.json
@@ -13,7 +13,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/discord/community"],
+      "outputs": ["{workspaceRoot}/coverage/libs/discord/community"],
       "options": {
         "jestConfig": "libs/discord/community/jest.config.ts",
         "passWithNoTests": true
