--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.2.12",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "14.2.12",
-    "@angular/compiler": "14.2.12",
-    "@angular/core": "14.2.12",
-    "@angular/forms": "14.2.12",
-    "@angular/platform-browser": "14.2.12",
-    "@angular/platform-browser-dynamic": "14.2.12",
-    "@angular/router": "14.2.12",
+    "@angular/animations": "15.0.1",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "15.0.1",
+    "@angular/compiler": "15.0.1",
+    "@angular/core": "15.0.1",
+    "@angular/forms": "15.0.1",
+    "@angular/platform-browser": "15.0.1",
+    "@angular/platform-browser-dynamic": "15.0.1",
+    "@angular/router": "15.0.1",
     "@discordjs/rest": "^0.2.0-canary.0",
     "@nestjs/common": "9.0.0",
     "@nestjs/core": "9.0.0",
@@ -61,25 +61,25 @@
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.10",
+    "@angular-devkit/build-angular": "15.0.1",
     "@angular-eslint/eslint-plugin": "14.0.4",
     "@angular-eslint/eslint-plugin-template": "14.0.4",
     "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "14.2.12",
-    "@angular/language-service": "14.2.12",
+    "@angular/cli": "15.0.1",
+    "@angular/compiler-cli": "15.0.1",
+    "@angular/language-service": "15.0.1",
     "@nestjs/schematics": "9.0.0",
     "@nestjs/testing": "9.0.0",
-    "@nrwl/angular": "15.0.0",
-    "@nrwl/cli": "15.0.0",
-    "@nrwl/cypress": "15.0.0",
-    "@nrwl/eslint-plugin-nx": "15.0.0",
-    "@nrwl/jest": "15.0.0",
-    "@nrwl/linter": "15.0.0",
-    "@nrwl/nest": "15.0.0",
-    "@nrwl/node": "15.0.0",
-    "@nrwl/web": "15.0.0",
-    "@nrwl/workspace": "15.0.0",
+    "@nrwl/angular": "15.2.1",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/cypress": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/nest": "15.2.1",
+    "@nrwl/node": "15.2.1",
+    "@nrwl/web": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
     "@types/jest": "28.1.8",
     "@types/node": "18.7.1",
     "@types/passport-jwt": "^3.0.7",
@@ -95,7 +95,7 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
-    "nx": "15.0.0",
+    "nx": "15.2.1",
     "prettier": "2.6.2",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
