Executed successful migrations
Removed them from migrations. Still need to run failed which have been left in migrations.json

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@angular-eslint/eslint-plugin": "14.0.4",
     "@angular-eslint/eslint-plugin-template": "14.0.4",
     "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "15.0.1",
+    "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "15.0.1",
     "@angular/language-service": "15.0.1",
     "@nestjs/schematics": "9.0.0",
@@ -85,7 +85,7 @@
     "@types/passport-jwt": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
-    "cypress": "^10.7.0",
+    "cypress": "^11.0.0",
     "discord-api-types": "^0.26.0",
     "dotenv": "10.0.0",
     "eslint": "8.15.0",
