--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -52,10 +52,10 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/supreme-discord-community-bot-node/**/*.ts"]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
