--- a/apps/ark-cacher-node/project.json
+++ b/apps/ark-cacher-node/project.json
@@ -41,7 +41,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/ark-cacher-node/**/*.ts"]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
