--- a/apps/supremegaming-angular-e2e/project.json
+++ b/apps/supremegaming-angular-e2e/project.json
@@ -19,10 +19,10 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/supremegaming-angular-e2e/**/*.{js,ts}"]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": [],
