--- a/libs/common/entities/ark/project.json
+++ b/libs/common/entities/ark/project.json
@@ -6,12 +6,11 @@
   "generators": {},
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:lint",
+      "executor": "@nrwl/linter:eslint",
       "options": {
-        "linter": "eslint",
-        "tsConfig": ["libs/common/entities/ark/tsconfig.lib.json", "libs/common/entities/ark/tsconfig.spec.json"],
-        "exclude": ["**/node_modules/**", "!libs/common/entities/ark/**/*"]
-      }
+        "lintFilePatterns": ["libs/common/entities/ark/**/*.ts"]
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
