Remove whitespace in sample .env files
Causes issues with docker if sample used as a template

--- a/apps/supreme-discord-community-bot-node/.env.sample
+++ b/apps/supreme-discord-community-bot-node/.env.sample
@@ -1,9 +1,9 @@
-DISCORD_API_TOKEN =
-DISCORD_BOT_ID = 
-DISCORD_GUILD_ID = 
+DISCORD_API_TOKEN=
+DISCORD_BOT_ID=
+DISCORD_GUILD_ID=
 
-DISCORD_ROLE_CHANNEL_NAME = 
-DISCORD_WELCOME_CHANNEL_NAME = 
+DISCORD_ROLE_CHANNEL_NAME=
+DISCORD_WELCOME_CHANNEL_NAME=
 
 # 
 # Optional
@@ -14,4 +14,4 @@ DISCORD_WELCOME_CHANNEL_NAME =
 # 
 # https://discordjs.guide/creating-your-bot/command-deployment.html#command-registration
 # 
-DISCORD_REGISTER_SLASH_COMMANDS = 
+DISCORD_REGISTER_SLASH_COMMANDS=
