--- a/apps/supreme-discord-ticket-bot-node/.env.sample
+++ b/apps/supreme-discord-ticket-bot-node/.env.sample
@@ -1,20 +1,20 @@
-DISCORD_API_TOKEN =
-DISCORD_BOT_ID =
-DISCORD_GUILD_ID =
+DISCORD_API_TOKEN=
+DISCORD_BOT_ID=
+DISCORD_GUILD_ID=
 
-TYPEORM_CONNECTION =
-TYPEORM_HOST = 
-TYPEORM_PORT = 
-TYPEORM_USERNAME = 
-TYPEORM_PASSWORD = 
-TYPEORM_DATABASE = 
-TYPEORM_SYNCHRONIZE = 
-TYPEORM_DROP_SCHEMA = 
-TYPEORM_LOGGING = 
-TYPEORM_DRIVER_EXTRA = 
+TYPEORM_CONNECTION=
+TYPEORM_HOST=
+TYPEORM_PORT=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
+TYPEORM_SYNCHRONIZE=
+TYPEORM_DROP_SCHEMA=
+TYPEORM_LOGGING=
+TYPEORM_DRIVER_EXTRA=
 
 
-# 
+#
 # Optional
 # 
 
@@ -23,4 +23,4 @@ TYPEORM_DRIVER_EXTRA =
 # 
 # https://discordjs.guide/creating-your-bot/command-deployment.html#command-registration
 # 
-DISCORD_REGISTER_SLASH_COMMANDS = 
+DISCORD_REGISTER_SLASH_COMMANDS=
