--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,17 @@
 name: Build Affected
 
 on:
-  workflow_run:
-    workflows: [Lint Affected]
-    types:
-      - completed
+  workflow_call:
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: $
 
       - name: Setup Node
         uses: actions/setup-node@v3
