ci: Add lint affected workflow (#24)
* Add lint workflow

* Use main entry and call other workflows

* Rename workflow labels

* Update main name

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,13 @@
-name: Build Affected
+name: Lint Affected
 
 on:
   workflow_call:
 
 jobs:
-  build:
+  lint:
     name: Affected
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -28,11 +29,5 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci --legacy-peer-deps
 
-      - name: Build Affected
-        run: npx nx affected:build --configuration=production --exclude=ark-cacher-node,conan-cacher,data-api-nest  --base=origin/development --parallel=2
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.sha }}
-          path: dist/
+      - name: Lint Affected
+        run: npx nx affected:lint --configuration=production --exclude=ark-cacher-node,conan-cacher,data-api-nest  --base=origin/development --parallel=2
