--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ~/artifacts
-          file: ~/artifacts/Dockerfile
+          file: ~/artifacts/apps/supreme-discord-community-bot-node/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
