Set workflow name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
       - name: 'Download artifacts'
         uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: build.yml
           name: ${{ github.event.pull_request.head.sha }}
 
       - name: Docker login
