Set workflow name to be main.yml
It found the workflow artifacts from when build.yml was runnign independently on workflow_run completion of lint.yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
       - name: 'Download artifacts'
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: build.yml
+          workflow: main.yml
           name: ${{ github.event.pull_request.head.sha }}
 
       - name: Docker login
