--- a/apps/supreme-discord-ticket-bot-node/src/Dockerfile
+++ b/apps/supreme-discord-ticket-bot-node/src/Dockerfile
@@ -2,6 +2,6 @@ FROM node:16.17.0
 ENV NODE_ENV=production
 WORKDIR /app
 COPY package*.json ./
-RUN npm i --omit=dev
+RUN npm i --omit=dev --legacy-peer-deps
 COPY . ./
 CMD ["node", "main.js"]
