--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,10 @@ jobs:
       - name: 'Set matrix'
         id: set-matrix
         # run script to generate matrix by getting a list of all directories that have a dockerfile as json array in the /artifact directory
-        run: |
-          cd artifacts/apps
-          echo "::set-output name=matrix::$(jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique')"
+        # run: |
+        #   cd artifacts/apps
+        #   echo "::set-output name=matrix::$(jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique')"
+        run: echo "matrix=['supreme-discord-community-bot-node']" >> $GITHUB_OUTPUT
 
   build-and-push:
     needs: list-publishable
@@ -36,7 +37,6 @@ jobs:
     strategy:
       matrix:
         image: ${{ fromJson(needs.list-publishable.outputs.matrix) }}
-
     steps:
       - name: 'Download artifacts'
         uses: dawidd6/action-download-artifact@v2
