Echo value before setting matrix variable

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,7 @@ jobs:
         # run script to generate matrix by getting a list of all directories that have a dockerfile as json array in the /artifact directory
         run: |
           cd ./artifacts/apps
+          echo jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique'
           echo "matrix=$(jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique')"
 
         # run: echo "matrix=['supreme-discord-community-bot-node']" >> $GITHUB_OUTPUT
