--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,8 @@ jobs:
         # run script to generate matrix by getting a list of all directories that have a dockerfile as json array in the /artifact directory
         run: |
           cd ./artifacts/apps
-          echo jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique'
+          pwd && ls -la
+          echo $(find . -name "Dockerfile" -exec dirname {} \; | sed 's/^\.\///' | jq -R . | jq -s .;)
           echo "matrix=$(jq -nR '[inputs | select(contains("Dockerfile")) | split("/") | .[0]] | unique')"
 
         # run: echo "matrix=['supreme-discord-community-bot-node']" >> $GITHUB_OUTPUT
