Build supremegaming-angular prod build config

--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -33,6 +33,7 @@
               "with": "apps/supremegaming-angular/src/environments/environment.prod.ts"
             }
           ],
+          "aot": true,
           "optimization": true,
           "outputHashing": "all",
           "sourceMap": false,
