--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.2",
+    "jest-preset-angular": "^12.2.4",
     "nx": "15.2.1",
     "prettier": "2.6.2",
     "ts-jest": "28.0.8",
