--- a/libs/discord/bootstrap/project.json
+++ b/libs/discord/bootstrap/project.json
@@ -5,14 +5,14 @@
   "projectType": "library",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/discord/bootstrap/**/*.ts"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/discord/bootstrap"],
       "options": {
         "jestConfig": "libs/discord/bootstrap/jest.config.ts",
