--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -84,14 +84,14 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/supremegaming-angular/src/**/*.ts", "apps/supremegaming-angular/src/**/*.html"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/supremegaming-angular"],
       "options": {
         "jestConfig": "apps/supremegaming-angular/jest.config.ts",
@@ -101,4 +101,3 @@
   },
   "tags": []
 }
-
