--- a/libs/common/entities/steam/project.json
+++ b/libs/common/entities/steam/project.json
@@ -6,14 +6,14 @@
   "generators": {},
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/common/entities/steam/**/*.ts"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "options": {
         "jestConfig": "libs/common/entities/steam/jest.config.ts",
         "tsConfig": "libs/common/entities/steam/tsconfig.spec.json",
