--- a/libs/data-access/project.json
+++ b/libs/data-access/project.json
@@ -6,14 +6,14 @@
   "prefix": "supremegaming",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/data-access/src/**/*.ts", "libs/data-access/src/**/*.html"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/data-access"],
       "options": {
         "jestConfig": "libs/data-access/jest.config.ts",
