--- a/package.json
+++ b/package.json
@@ -28,22 +28,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.1",
-    "@angular/cdk": "15.0.0",
-    "@angular/common": "15.0.1",
-    "@angular/compiler": "15.0.1",
-    "@angular/core": "15.0.1",
-    "@angular/forms": "15.0.1",
-    "@angular/platform-browser": "15.0.1",
-    "@angular/platform-browser-dynamic": "15.0.1",
-    "@angular/router": "15.0.1",
+    "@angular/animations": "16.1.8",
+    "@angular/cdk": "16.1.7",
+    "@angular/common": "16.1.8",
+    "@angular/compiler": "16.1.8",
+    "@angular/core": "16.1.8",
+    "@angular/forms": "16.1.8",
+    "@angular/platform-browser": "16.1.8",
+    "@angular/platform-browser-dynamic": "16.1.8",
+    "@angular/router": "16.1.8",
     "@discordjs/rest": "^0.2.0-canary.0",
-    "@nestjs/common": "9.0.0",
-    "@nestjs/core": "9.0.0",
-    "@nestjs/jwt": "9.0.0",
-    "@nestjs/passport": "9.0.0",
-    "@nestjs/platform-express": "9.0.0",
-    "@nestjs/typeorm": "9.0.1",
+    "@nestjs/common": "10.0.2",
+    "@nestjs/core": "10.0.2",
+    "@nestjs/jwt": "~10.1.0",
+    "@nestjs/passport": "~10.0.0",
+    "@nestjs/platform-express": "10.0.2",
+    "@nestjs/typeorm": "10.0.0",
+    "@nx/angular": "16.6.0",
     "discord.js": "^13.14.0",
     "marked": "^1.2.7",
     "mysql": "^2.18.1",
@@ -58,47 +59,49 @@
     "typeorm": "^0.3.0",
     "uuid": "^3.3.2",
     "webfontloader": "^1.6.28",
-    "zone.js": "0.11.5"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.1",
-    "@angular-eslint/eslint-plugin": "14.0.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.4",
-    "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "15.0.1",
-    "@angular/language-service": "15.0.1",
-    "@nestjs/schematics": "9.0.0",
-    "@nestjs/testing": "9.0.0",
-    "@nrwl/angular": "15.2.1",
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/cypress": "15.2.1",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/jest": "15.2.1",
-    "@nrwl/linter": "15.2.1",
-    "@nrwl/nest": "15.2.1",
-    "@nrwl/node": "15.2.1",
-    "@nrwl/web": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
-    "@types/jest": "28.1.8",
-    "@types/node": "18.7.1",
+    "@angular-devkit/build-angular": "16.1.7",
+    "@angular-devkit/core": "16.1.7",
+    "@angular-devkit/schematics": "16.1.7",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/cli": "16.1.7",
+    "@angular/compiler-cli": "16.1.8",
+    "@angular/language-service": "16.1.8",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "10.0.2",
+    "@nx/cypress": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/nest": "16.6.0",
+    "@nx/node": "16.6.0",
+    "@nx/web": "16.6.0",
+    "@nx/workspace": "16.6.0",
+    "@schematics/angular": "16.1.7",
+    "@types/jest": "^29.4.0",
+    "@types/node": "16.11.7",
     "@types/passport-jwt": "^3.0.7",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "cypress": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "cypress": "^12.2.0",
     "discord-api-types": "^0.26.0",
     "dotenv": "10.0.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "^12.2.4",
-    "nx": "15.2.1",
-    "prettier": "2.6.2",
-    "ts-jest": "28.0.8",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "13.1.1",
+    "nx": "16.6.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "5.1.6"
   }
 }
