--- a/apps/conan-cacher/project.json
+++ b/apps/conan-cacher/project.json
@@ -32,7 +32,7 @@
       "outputs": ["{options.outputPath}"]
     },
     "serve": {
-      "executor": "@nx/node:node",
+      "executor": "@nx/js:node",
       "options": {
         "buildTarget": "conan-cacher:build"
       }
