--- a/apps/data-api-nest/project.json
+++ b/apps/data-api-nest/project.json
@@ -32,7 +32,7 @@
       "outputs": ["{options.outputPath}"]
     },
     "serve": {
-      "executor": "@nx/node:node",
+      "executor": "@nx/js:node",
       "options": {
         "buildTarget": "data-api-nest:build"
       }
