--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -45,7 +45,7 @@
       }
     },
     "serve": {
-      "executor": "@nx/node:node",
+      "executor": "@nx/js:node",
       "options": {
         "buildTarget": "supreme-discord-community-bot-node:build"
       }
