--- a/apps/supreme-discord-ticket-bot-node/project.json
+++ b/apps/supreme-discord-ticket-bot-node/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/webpack:webpack",
+      "executor": "@nx/webpack:webpack",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/supreme-discord-ticket-bot-node",
@@ -42,20 +42,20 @@
       }
     },
     "serve": {
-      "executor": "@nrwl/node:node",
+      "executor": "@nx/js:node",
       "options": {
         "buildTarget": "supreme-discord-ticket-bot-node:build"
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/supreme-discord-ticket-bot-node/**/*.ts"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/supreme-discord-ticket-bot-node"],
       "options": {
         "jestConfig": "apps/supreme-discord-ticket-bot-node/jest.config.ts",
