--- a/libs/api/.babelrc
+++ b/libs/api/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": [["@nrwl/web/babel", { "useBuiltIns": "usage" }]]
+  "presets": [
+    [
+      "@nx/js/babel",
+      {
+        "useBuiltIns": "usage"
+      }
+    ]
+  ]
 }
+
